--- a/src/.config/sway/config
+++ b/src/.config/sway/config
@@ -58,11 +58,10 @@ default_border pixel 1
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
 # IDLE CONFIGURATION
-#exec swayidle -w \
-#	timeout 600 'swaylock -f -c 000000' \
-#	timeout 1200 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-#	before-sleep 'swaylock -f -c 000000'
-
+exec swayidle -w \
+timeout 600 'swaylock -f -c 000000' \
+timeout 1200 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
+before-sleep 'swaylock -f -c 000000'
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
