--- a/src/.config/sway/config
+++ b/src/.config/sway/config
@@ -49,13 +49,21 @@ default_border pixel 1
 # OUTPUT CONFIGURATION
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 #output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-#output * bg #000000 solid_color
+output * bg #000000 solid_color
 #output * bg $sanjuan fill
 # Example configuration:
 #
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
 #
+# output HDMI-A-1 resolution 1920x1080 position 1920,0
+output eDP-1 position 0,0
+output DP-1 resolution 1920x1080@60Hz position 1366,0
+#output eDP-1 disable
 # You can get the names of your outputs by running: swaymsg -t get_outputs
+
+# Set Workspaces
+workspace 1 output eDP-1
+workspace 2 output DP-1
+
 
 # IDLE CONFIGURATION
 exec swayidle -w \
@@ -102,6 +110,16 @@ mode "$mode_system" {
 #bindsym $mod+Pause mode "$mode_system"
 bindsym $mod+Shift+BackSpace mode "$mode_system"
 
+# Set Monitors
+set $mode_monitors System (o) External-Only, (p) All
+mode "$mode_monitors" {
+    bindsym o output eDP-1 disable, mode "default"
+    bindsym p output eDP-1 enable, mode "default"
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+BackSpace mode "$mode_monitors"
+
 # STATUS BAR
 # Read `man 5 sway-bar` for more information about this section.
 bar {
@@ -142,7 +160,6 @@ bindsym $mod+Ctrl+p exec grimshot save window
 bindsym $mod+Mod1+p exec grimshot save output
 bindsym $mod+Shift+p exec grimshot save area
 bindsym $mod+p exec grimshot save active
-
 
 #bindsym $mod+Shift+o exec google-chrome
 #bindsym $mod+Shift+u flatpak run com.google.Chrome
