--- a/src/.config/sway/config
+++ b/src/.config/sway/config
@@ -29,7 +29,7 @@ set $term kitty
 set $term2 terminator
 
 # Locker
-set $locker swaylock
+set $locker swaylock -f -c 000000
 
 # Backgrounds
 #set $beach $HOME/Syncthing/Backgrounds/beach_lopez-robin-apax4M-4kFI-unsplash.jpg
@@ -55,8 +55,13 @@ output * bg #000000 solid_color
 #
 #
 # output HDMI-A-1 resolution 1920x1080 position 1920,0
-output eDP-1 position 0,0
-output DP-1 resolution 1920x1080@60Hz position 1366,0
+# Vertical Setup
+output eDP-1 position 0,1080
+output DP-1 resolution 1920x1080@60Hz position 0,0
+
+# Horizontal Setup
+#output eDP-1 position 0,0
+#output DP-1 resolution 1920x1080@60Hz position 1366,0
 #output eDP-1 disable
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
