Update Sway Config.

--- a/src/.config/sway/config
+++ b/src/.config/sway/config
@@ -35,7 +35,7 @@ set $locker swaylock -f -c 000000
 #set $beach $HOME/Syncthing/Backgrounds/beach_lopez-robin-apax4M-4kFI-unsplash.jpg
 #set $beach2 $HOME/Syncthing/Backgrounds/beach_adriel-kloppenburg-S1XAf3JxOLI-unsplash.jpg
 #set $sanjuan $HOME/Syncthing/Backgrounds/san-juan_robert-v-ruggiero-XV5Osh0TOuc-unsplash.jpg
-set $abstract1 $HOME/Syncthing/Backgrounds/macosx/11-0-Big-Sur-Color-Night.jpg
+#set $abstract1 $HOME/Syncthing/Backgrounds/macosx/11-0-Big-Sur-Color-Night.jpg
 
 # Application Launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
@@ -50,9 +50,9 @@ default_border pixel 1
 # OUTPUT CONFIGURATION
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 #output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-#output * bg #000000 solid_color
+output * bg #000000 solid_color
 #output * bg $sanjuan fill
-output * bg $abstract1 fill
+#output * bg $abstract1 fill
 # Example configuration:
 #
 #
@@ -73,10 +73,10 @@ workspace 2 output DP-1
 
 
 # IDLE CONFIGURATION
-exec swayidle -w \
-timeout 600 'swaylock -f -c 000000' \
-timeout 1200 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-before-sleep 'swaylock -f -c 000000'
+#exec swayidle -w \
+#timeout 600 'swaylock -f -c 000000' \
+#timeout 1200 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
+#before-sleep 'swaylock -f -c 000000'
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
