--- a/src/.config/i3/config
+++ b/src/.config/i3/config
@@ -124,7 +124,7 @@ set $ws6 "6"
 set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
-set $ws10 "10"
+#set $ws10 "10"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
@@ -136,7 +136,7 @@ bindsym $mod+6 workspace number $ws6
 bindsym $mod+7 workspace number $ws7
 bindsym $mod+8 workspace number $ws8
 bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+#bindsym $mod+0 workspace number $ws10
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
@@ -148,7 +148,7 @@ bindsym $mod+Shift+6 move container to workspace number $ws6
 bindsym $mod+Shift+7 move container to workspace number $ws7
 bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
+#bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -236,7 +236,7 @@ set $refresh_i3status killall -SIGUSR1 i3status
 #bindsym XF86MonBrightnessDown exec xbacklight -dec 5
 #bindsym XF86MonBrightnessUp exec xbacklight -inc 5
 bindsym $mod+Return exec terminator
-bindsym $mod+Shift+Return exec urxvt
+bindsym $mod+Shift+Return exec terminator
 bindsym $mod+Shift+i exec flatpak run com.google.Chrome --incognito
 bindsym $mod+Shift+o exec flatpak run com.google.Chrome
 bindsym $mod+Shift+plus exec pactl set-sink-volume @DEFAULT_SINK@ 40% && $refresh_i3status
@@ -263,6 +263,7 @@ bindsym XF86MonBrightnessUp exec brightnessctl set 5%+
 exec --no-startup-id /usr/bin/dunst
 exec --no-startup-id /usr/bin/gnome-keyring-daemon --start --components=ssh,secrets,pkcs11
 exec --no-startup-id /usr/bin/lxpolkit
+exec --no-startup-id autotiling
 exec --no-startup-id blueman-applet
 exec --no-startup-id blueman-tray
 exec --no-startup-id nm-applet
