Improve i3 configuration. Improve ZSH configuration. Improve upgrade script.

--- a/src/.config/i3/i3bar.conf
+++ b/src/.config/i3/i3bar.conf
@@ -4,7 +4,7 @@
 bar {
 	#hidden_state hide
 	font pango:monospace 14px
-	position bottom
+	position top
 	status_command i3status
 	tray_output primary
         #mode hide
