--- a/src/.config/kitty/kitty.conf
+++ b/src/.config/kitty/kitty.conf
@@ -1,19 +1,25 @@
+update_check_interval 0
+
 # Sound off
 enable_audio_bell no
 
 # Font
-font_family Monospace Regular
-italic_font auto
 bold_italic_font auto
-font_size 11
+font_family Monospace Regular
+font_size 13
+italic_font auto
 
 # Theme
-foreground #FFFFFF
 background #000000
+foreground #FFFFFF
 url_color #FF851B
 
+background_opacity 0.85
 term xterm-256color
-background_opacity 0.80
 
 # MacOS
 macos_quit_when_last_window_closed yes
+
+# Blink Cursor
+cursor #01FF70
+cursor_blink_interval 0.5
