--- a/src/.config/terminator/config
+++ b/src/.config/terminator/config
@@ -15,7 +15,7 @@
     show_titlebar = False
     scrollbar_position = hidden
     scroll_on_output = True
-    palette = "#000000:#cd0000:#00cd00:#cdcd00:#0000cd:#cd00cd:#00cdcd:#faebd7:#404040:#ff0000:#00ff00:#ffff00:#0000ff:#ff00ff:#00ffff:#ffffff"
+    palette = "#000000:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
     use_system_font = False
     bold_is_bright = True
   [[Victor]]
