--- a/src/.config/i3/config
+++ b/src/.config/i3/config
@@ -210,6 +210,8 @@ bindsym $mod+i exec firefox --private-window
 bindsym $mod+o exec firefox
 bindsym $mod+p exec arandr
 bindsym $mod+slash exec kitty -e ranger
+bindsym Shift+control+4 exec flameshot gui
+bindsym Shift+control+5 exec flameshot screen
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
